--- a/index.css
+++ b/index.css
@@ -3,9 +3,17 @@ html, body {
     background: pink;
     display: flex;
     justify-content: center;
-    
-    
+
 }
+
+  .parameters {
+    position: absolute;
+    background: white;
+    border: 2px solid black;
+    padding: 0.5em;
+    left: 15rem;
+    top: 10rem;
+  }
 
 .container {
     margin-top: 5rem;
@@ -32,11 +40,12 @@ html, body {
     background-color: red;
     padding: 2rem;
     box-shadow: 10px 11px rgb(179, 2, 2);
+    
 }
 
 .center-middle {
-    padding: 7rem;
-    background-color: gray;
+    
+    background-color: rgb(177, 166, 166);
 
 }
 
@@ -50,6 +59,14 @@ html, body {
     border-bottom-right-radius: 1em;
     border-bottom-left-radius: 1em;
     box-shadow: 10px 11px rgb(179, 2, 2);
+}
+
+.top {
+    padding: 1.5rem;
+    text-align: center;
+    color: gold;
+    text-shadow: 1px 1px rgb(0, 0, 0);;
+    font-style: italic;
 }
 
 .container {
@@ -66,3 +83,52 @@ button {
 }
 
 
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
+  }
+  
+  #whiteboard {
+    display: grid;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+  }
+  
+  .item {
+    padding: 0.5em;
+    border: 0.1em solid #ddd;
+    text-align: center;
+    color: rgb(177, 166, 166);
+  }
+
+  .my-colour-class {
+    background-color: blue;
+  }
+
+.default,#reset,#submit {
+  border-radius: 0px;
+    padding: 0.5em 1em;
+}
+
+@-webkit-keyframes shake {
+    0% { -webkit-transform: translate(2px, 1px) rotate(0deg); } 
+    10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+    30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+    40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+    50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+    70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+    80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+    90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+    100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+.shake {
+    -webkit-animation-name: shake;
+    -webkit-animation-duration: 0.5s;
+    -webkit-transform-origin:50% 50%;
+    -webkit-animation-iteration-count: infinite;
+}
+.shake {
+    display:inline-block
+}
