--- a/index.css
+++ b/index.css
@@ -95,15 +95,21 @@ button {
   }
   
   .item {
-    padding: 0.5em;
-    border: 0.1em solid #ddd;
-    text-align: center;
-    color: rgb(177, 166, 166);
+    padding: 3px;
+    border: 0.5px solid #ddd;
+
+    
   }
 
-  .my-colour-class {
-    background-color: blue;
+  .colourClass {
+    background-color: black;
+    border: 0.5px solid black;
   }
+
+.newPad {
+   padding: 0.5em;
+  background: black;
+}
 
 .default,#reset,#submit {
   border-radius: 0px;
@@ -132,3 +138,4 @@ button {
 .shake {
     display:inline-block
 }
+
